# ScintillaQuick

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
benchmarks/embedded_editor/: main.cpp
cmake/: ScintillaQuickConfig.cmake.in
docs/: architecture.md  dispatch_audit_triage.md  dispatch_table_maintainability.md  getting_started.md  limitations.md  maintenance_invariants.md  native_text_scene_graph_phase0_work_package.md  notification_api_compatibility.md  performance_optimization_process.md  performance_zoom_bounce_case_study.md  platform_window_ownership.md  remaining_remediation_roadmap.md  render_invalidation_metrics_baseline.md  render_invalidation_state_design.md  review_remediation_plan.md  scintillaquick_optimization_iteration_guide.md  test_access_api_boundary.md  tortoisediff_widget_plan.md
examples/common/: ScintillaQuickFont.h  ScintillaQuickWindowBinding.h  scintillaquick_font.h  scintillaquick_window_binding.h
examples/minimal_editor/: main.cpp
examples/tortoisediff_baseline/: main.cpp  tortoisediff_merge_model.h
include/scintilla_quick/: scintilla_quick.h
include/scintillaquick/: ScintillaQuickItem.h  scintillaquick_item.h
src/core/: ScintillaQuickCore.cpp  ScintillaQuickCore.h  scintillaquick_core.cpp  scintillaquick_core.h  scintillaquick_dispatch_table.h  scintillaquick_hierarchical_profiler.h
src/platform/: scintillaquick_fonts.cpp  scintillaquick_fonts.h  scintillaquick_fonts.qrc  scintillaquick_platqt.cpp  scintillaquick_platqt.h
src/public/: ScintillaQuickItem.cpp  scintillaquick_item.cpp
src/render/: render_frame.h  scintillaquick_scene_graph_renderer.cpp  scintillaquick_scene_graph_renderer.h
tests/: CMakeLists.txt
tests/dispatch_table/: main.cpp
tests/frame_validation/: main.cpp
tests/frame_visual_regression/: main.cpp
tests/review_capture/: main.cpp
tests/smoke/: main.cpp
tests/support/: scintillaquick_test_documents.h  scintillaquick_test_editor.h  scintillaquick_test_events.h  scintillaquick_test_macros.h  scintillaquick_validation_access.h
tests/tortoisediff_step1/: main.cpp
tools/dispatch/: audit_dispatch_table.py
